// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage Debe de mostrar el componente con la imagen del producto 1`] = `
<div
  className="productCard undefined "
>
  <img
    alt="Coffe Mug"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;

exports[`ProductImage Debe mostrar el componente correctamente con la imagen personalizado 1`] = `
<img
  alt="Coffe Mug"
  className="productImg undefined"
  src="https://hola.jpg"
/>
`;
